<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/username" android:textSize="18sp"/>
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblUsername"
            android:hint="@string/pleaseEnterName" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLayout">
        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/password" android:textSize="18sp"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblPassword"
            android:hint="@string/pleaseEnterPassword" />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/confirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout">
        <TextView
            android:id="@+id/lblConfirm"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/confirm" android:textSize="18sp"/>
        <EditText
            android:id="@+id/txtConfirm"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/lblConfirm"
            android:hint="@string/pleaseConfirmPassword" />
        </LinearLayout>
    <Button android:id="@+id/ok_button" android:text="@string/submit" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textSize="32sp" android:layout_below="@id/confirmLayout"
        android:layout_alignRight="@id/confirmLayout"
        />


</RelativeLayout>
